fix[art-navigator]: disable scroll on root el & fix header jumping

--- a/src/components/ArticleNavigator/styles.css
+++ b/src/components/ArticleNavigator/styles.css
@@ -1,3 +1,13 @@
+.header {
+  --scroll-w: 15px;
+  transition: right 0ms 50ms;
+}
+
+.header.navigator-opened {
+  right: var(--scroll-w);
+  transition: right 0ms 0ms;
+}
+
 .article-navigator {
   --vis-dur: 400ms;
 
